changes some typos, and added the mnist.npz to repo

--- a/1_Feedforward/1.2-automatic-differentiation.ipynb
+++ b/1_Feedforward/1.2-automatic-differentiation.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,9 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1.],\n",
+      "        [1., 1.]], requires_grad=True)\n"
+     ]
+    }
+   ],
    "source": [
     "x = Variable(torch.ones(2, 2), requires_grad=True)\n",
     "print(x)"
@@ -80,9 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[3., 3.],\n",
+      "        [3., 3.]], grad_fn=<AddBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "y = x + 2\n",
     "print(y)"
@@ -97,9 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<AddBackward object at 0x103622550>\n"
+     ]
+    }
+   ],
    "source": [
     "print(y.grad_fn)"
    ]
@@ -113,9 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[27., 27.],\n",
+      "        [27., 27.]], grad_fn=<MulBackward>)\n",
+      "tensor(27., grad_fn=<MeanBackward1>)\n"
+     ]
+    }
+   ],
    "source": [
     "z = y * y * 3\n",
     "out = z.mean()\n",
@@ -145,11 +181,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out.backward()"
+    "out.backward(retain_graph=True)"
    ]
   },
   {
@@ -161,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,9 +206,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[27., 27.],\n",
+      "        [27., 27.]])\n"
+     ]
+    }
+   ],
    "source": [
     "print(x.grad)"
    ]
@@ -194,9 +239,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([954.2419,  41.1134, 668.7415], grad_fn=<MulBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(3)\n",
     "x = Variable(x, requires_grad=True)\n",
@@ -210,9 +263,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 51.2000, 512.0000,   0.0512])\n"
+     ]
+    }
+   ],
    "source": [
     "gradients = torch.FloatTensor([0.1, 1.0, 0.0001])\n",
     "y.backward(gradients)\n",
