--- a/1_Feedforward/1.1-what-is-pytorch.ipynb
+++ b/1_Feedforward/1.1-what-is-pytorch.ipynb
@@ -125,7 +125,7 @@
     "\n",
     "1. Make a tensor of size (2, 17)\n",
     "2. Make a torch.FloatTensor of size (3, 1)\n",
-    "3. Make a tochh.LongTensor of size (5, 2, 1)\n",
+    "3. Make a torch.LongTensor of size (5, 2, 1)\n",
     "  - fill the entire tensor with 7s\n",
     "4. Make a torch.ByteTensor of size (5,)\n",
     "  - fill the middle 3 indices with ones such that it records [0, 1, 1, 1, 0]"
@@ -242,7 +242,7 @@
     "\n",
     "1. multiply of two tensors (see [torch.Tensor.mul](http://pytorch.org/docs/master/tensors.html#torch.Tensor.mul))\n",
     "2. do the same, but inplace\n",
-    "3. multiply of two tensors (see [torch.Tensor.div](http://pytorch.org/docs/master/tensors.html#torch.Tensor.div))\n",
+    "3. division of two tensors (see [torch.Tensor.div](http://pytorch.org/docs/master/tensors.html#torch.Tensor.div))\n",
     "4. perform a matrix multiplication of two tensors of size (2, 4) and (4, 2)"
    ]
   },
