Changed the link

--- a/1_Feedforward/1.4-FFN-MNIST.ipynb
+++ b/1_Feedforward/1.4-FFN-MNIST.ipynb
@@ -79,7 +79,7 @@
     }
    ],
    "source": [
-    "!if [ ! -f mnist.npz ]; then wget -N https://raw.githubusercontent.com/DeepLearningDTU/02456-deep-learning-with-PyTorch/master/static_files/mnist.npz; else echo \"mnist.npz already downloaded\"; fi"
+    "!if [ ! -f mnist.npz ]; then wget -N https://github.com/maximai/placeholder_repo/raw/master/mnist.npz; else echo \"mnist.npz already downloaded\"; fi"
    ]
   },
   {
