--- a/1_Feedforward/1.2-automatic-differentiation.ipynb
+++ b/1_Feedforward/1.2-automatic-differentiation.ipynb
@@ -185,7 +185,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out.backward(retain_graph=True)"
+    "out.backward()"
    ]
   },
   {
@@ -193,15 +193,6 @@
    "metadata": {},
    "source": [
     "print gradients d(out)/dx"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z.sum().backward()"
    ]
   },
   {
