Add manual calculation exercise

--- a/2_Convolutional/2.1-CNN.ipynb
+++ b/2_Convolutional/2.1-CNN.ipynb
@@ -87,6 +87,20 @@
    "source": [
     "# Assignment 1\n",
     "\n",
+    "### Assignment 1.1: Manual calculations\n",
+    "\n",
+    "Perform the following computation, and write the result below.\n",
+    "\n",
+    "![](images/conv_exe.png)\n",
+    "\n",
+    "1. Manually convolve the input, and compute the convolved features. No padding and stride of 1.\n",
+    "1. Perform `2x2` max pooling on the convolved features. Stride of 2.\n",
+    "\n",
+    "**Answer:**\n",
+    "\n",
+    "\n",
+    "### Assignment 1.2: Output dimensionality\n",
+    "\n",
     "Given the following 3D tensor input `(channel, height, width)` , a given amount (`channels_out`) of filters `(channels_in, filter_height, filter_width)`, stride `(height, width)` and padding `(height, width)`, calculate the output dimensionality if it's valid.\n",
     "\n",
     "1. input tensor with dimensionality (1, 28, 28) and 16 filters of size (1, 5, 5) with stride (1, 1) and padding (0, 0)\n",
