Fix transfer learning notes in end

--- a/2_Convolutional/2.2-CNN.ipynb
+++ b/2_Convolutional/2.2-CNN.ipynb
@@ -93,7 +93,9 @@
     "model = Net() # define the model as always\n",
     "net = torch.nn.DataParallel(model, device_ids=None) # tell pytorch to use all available cuda devices\n",
     "output = net(input_var) # run on all devices\n",
-    "```"
+    "```\n",
+    "\n",
+    "Check out [the data parallel example](http://pytorch.org/tutorials/beginner/former_torchies/parallelism_tutorial.html) if you want to know more."
    ]
   },
   {
@@ -569,10 +571,10 @@
     "# A few pointers for image classification\n",
     "\n",
     "If you want do image classification, using a pretrained model is often a good choice, especially if you have limited amounts of labelled data.\n",
-    "\n",
-    "An often used pretrained network is the Google Inception model. PyTorch has a [guide for using their current state-of-the-art pretrained model](http://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html) in their [model repository](https://github.com/pytorch/vision/tree/master/torchvision/models).\n",
-    "\n",
-    "Currently the best performing image network is the [ResNet](https://arxiv.org/pdf/1512.03385v1.pdf) model. Torch7 has [an interesting blog post about residual nets](http://torch.ch/blog/2016/02/04/resnets.html)."
+    "PyTorch has a \n",
+    "[guide for using their current state-of-the-art pretrained model](http://pytorch.org/tutorials/beginner/transfer_learning_tutorial.html) in their \n",
+    "[model repository](https://github.com/pytorch/vision/tree/master/torchvision/models).\n",
+    "Torch7 has [an interesting blog post about residual nets](http://torch.ch/blog/2016/02/04/resnets.html), an architecture that was very popular and influential a while back."
    ]
   }
  ],
