Minor changes from Ole

--- a/2_Convolutional/2.3-EXE-CIFAR-10.ipynb
+++ b/2_Convolutional/2.3-EXE-CIFAR-10.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "1. Load and normalizing the CIFAR10 training and test datasets using\n",
     "   ``torchvision``\n",
-    "2. Define a Convolution Neural Network\n",
+    "2. Define a Convolutional Neural Network\n",
     "3. Define a loss function\n",
     "4. Train the network on the training data\n",
     "5. Test the network on the test data\n",
@@ -95,7 +95,7 @@
     "\n",
     "used_categories = range(len(classes))\n",
     "\n",
-    "## USE CODE BELOW IF YOUR COMPUTER IS TO SLOW\n",
+    "## USE CODE BELOW IF YOUR COMPUTER IS TOO SLOW\n",
     "reduce_dataset = True\n",
     "if reduce_dataset:\n",
     "    used_categories = (3, 5) # cats and dogs\n",
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Define a Convolution Neural Network\n",
+    "## 2. Define a Convolutional Neural Network\n",
     "\n",
     "**Assignment 1:** Define a convolutional neural network. \n",
     "You may use the code from previous notebooks.\n",
@@ -225,7 +225,7 @@
     "## 3. Define a Loss function and optimizer\n",
     "\n",
     "**Assignment 2:** Implement the criterion and optimizer. \n",
-    "We suggestClassification Cross-Entropy loss and SGD with momentum.\n",
+    "We suggest Classification Cross-Entropy loss and SGD with momentum.\n",
     "You might need to experiment a bit with the learning rate."
    ]
   },
@@ -294,7 +294,7 @@
     "## 5. Test the network on the test data\n",
     "\n",
     "Now we need to check if the network has learnt anything at all.\n",
-    "We will check this by predicting the class label that the neural network outputs, and checking it against the ground-truth.\n",
+    "We will check this by predicting the class label that the neural network outputs, and checking it against the ground truth.\n",
     "If the prediction is correct, we add the sample to the list of correct predictions.\n",
     "\n",
     "Okay, first step. Let us display an image from the test set to get familiar."
