--- a/3_Recurrent/4.2-RNN.ipynb
+++ b/3_Recurrent/4.2-RNN.ipynb
@@ -4,51 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Recurrent Neural Networks\n",
+    "# Credits\n",
     "\n",
-    "A recurrent neural network (RNN) is a type of neural network that has been succesful in modelling sequential data, e.g. language, speech, protein sequences, etc.\n",
-    "\n",
-    "## Vanilla RNN\n",
-    "\n",
-    "A RNN performs its computations in a cyclic manner, where the same computation is applied to every sample of a given sequence.\n",
-    "The idea is that the network should be able to use the previous computations as some form of memory and apply this to the future computation.\n",
-    "An image may best explain how this is to be understood,"
+    "This is heavily influenced by https://github.com/pytorch/tutorials."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![rnn-unfold](../static_files/rnn-unfold.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Long Short-Term Memory RNN\n",
     "\n",
-    "where it the network contains the following elements:\n",
+    "This notebook\n",
+    "* Introduces the LSTM\n",
+    "* Combines what we have seen in the previous two notebooks\n",
+    "* Use an LSTM to perform sentiment analysis on SST\n",
+    "__\n",
     "\n",
-    "- $x$ is the input sequence of samples, \n",
-    "- $U$ is a weight matrix applied to the given input sample,\n",
-    "- $V$ is a weight matrix used for the recurrent computation in order to pass memory along the sequence,\n",
-    "- $W$ is a weight matrix used to compute the output of the every timestep (given that every timestep requires an output),\n",
-    "- $h$ is the hidden state (the network's memory) for a given time step, and\n",
-    "- $o$ is the resulting output.\n",
     "\n",
-    "When the network is unfolded as shown, it is easier to refer to a timestep, $t$.\n",
-    "We have the following computations through the network:\n",
     "\n",
-    "- $h_t = f(U_{x_t} + V_{h_{t-1}})$, where $f$ usually is an activation function, e.g. $\\mathrm{tanh}$.\n",
-    "- $o_t = \\mathrm{softmax}(W_{h_t})$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Using Better memory\n",
-    "\n",
+    "## Why do \n",
     "The vanilla RNN has issues with vanishing gradients which give challenges in saving memory over longer sequences.\n",
     "\n",
     "To battle these issues the gated hidden units were create.\n",
@@ -60,14 +35,13 @@
    "metadata": {},
    "source": [
     "![lstm](../static_files/lstm_cell.png)\n",
-    "source: https://arxiv.org/abs/1412.7828"
+    "source: https://arxiv.org/abs/1412.7828\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### LSTM\n",
     "\n",
     "The LSTM contains three gates, input, forget, output gates and a memory cell.\n",
     "The output of the LSTM unit is computed with the following functions, where $\\sigma = \\mathrm{softmax}$.\n",
@@ -106,7 +80,10 @@
    "source": [
     "# Stanford sentiment treebank\n",
     "\n",
-    "We will continue with the SST. See [lab 4.1](http://0.0.0.0:8888/notebooks/intermediate/4.1-Sequences.ipynb) for more information."
+    "We will continue with the SST.\n",
+    "See previous notebook for more information.\n",
+    "\n",
+    "The code below loads the data, similar to what we did previously."
    ]
   },
   {
@@ -115,7 +92,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import stuff\n",
     "import numpy as np\n",
     "\n",
     "from torchtext import data\n",
@@ -170,6 +146,7 @@
     "# however, the label field will not contain any sequence\n",
     "TEXT = data.Field(sequential=True)\n",
     "LABEL = data.Field(sequential=False)\n",
+    "\n",
     "# create SST dataset splits\n",
     "# note, we remove samples with neutral labels\n",
     "train_set, validation_set, _ = datasets.SST.splits(TEXT,\n",
@@ -177,11 +154,13 @@
     "                                                   fine_grained=False,\n",
     "                                                   train_subtrees=True,\n",
     "                                                   filter_pred=lambda ex: ex.label != 'neutral')\n",
+    "\n",
     "# build the vocabularies\n",
     "# NOTE you should download the GloVe vocabulary, it is quite large..\n",
-    "#url = 'https://s3-us-west-1.amazonaws.com/fasttext-vectors/wiki.simple.vec'\n",
-    "#TEXT.build_vocab(train_set, max_size=None, vectors=Vectors('wiki.simple.vec', url=url))\n",
-    "TEXT.build_vocab(train_set, max_size=None, vectors=[GloVe(name='840B', dim='300')])\n",
+    "url = 'https://s3-us-west-1.amazonaws.com/fasttext-vectors/wiki.simple.vec'\n",
+    "TEXT.build_vocab(train_set, max_size=None, vectors=Vectors('wiki.simple.vec', url=url))\n",
+    "\n",
+    "# TEXT.build_vocab(train_set, max_size=None, vectors=[GloVe(name='840B', dim='300')])\n",
     "LABEL.build_vocab(train_set)\n",
     "# make iterator for splits\n",
     "# device gives a CUDA enabled device (-1 disables it)\n",
@@ -194,7 +173,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Build the model"
+    "# Build the model\n",
+    "\n",
+    "We now use an `RNN` to classify the sentences.\n",
+    "(You will change this into an LSTM as an exercise).\n",
+    "\n"
    ]
   },
   {
@@ -209,10 +192,10 @@
     "num_classes = len(LABEL.vocab.itos)\n",
     "\n",
     "class Net(nn.Module):\n",
-    "\n",
     "    def __init__(self):\n",
     "        super(Net, self).__init__()\n",
     "        self.embeddings = nn.Embedding(num_embeddings, embedding_dim)\n",
+    "\n",
     "        # use pretrained embeddings\n",
     "        self.embeddings.weight.data.copy_(TEXT.vocab.vectors)\n",
     "        self.embeddings.weight.detach_()\n",
@@ -229,10 +212,13 @@
     "        out = {}\n",
     "        # get embeddings\n",
     "        x = self.embeddings(x)\n",
+    "\n",
     "        # rnn returns output and last hidden state\n",
     "        x, hn = self.rnn_1(x)\n",
+    "        \n",
     "        # get a fixed sized hidden representation of the entire sequence\n",
     "        out['hidden'] = x = torch.cat((torch.mean(x, dim=0), torch.max(x, dim=0)[0]), dim=1)\n",
+    "        \n",
     "        # classify\n",
     "        out['out'] = softmax(self.l_out(x), dim=1)\n",
     "        return out\n",
@@ -241,6 +227,14 @@
     "if use_cuda:\n",
     "    net.cuda()\n",
     "print(net)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For training we don't want to change the embedding.\n",
+    "We therefore need to filter it out from the parameters that we pass to the optimizer."
    ]
   },
   {
@@ -271,30 +265,12 @@
     "    return torch.mean(correct_prediction.float())\n",
     "\n",
     "def construct_sentences(batch):\n",
-    "    \"\"\"    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    batch: torchtext.data.batch.Batch\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    [str]\n",
-    "    \"\"\"\n",
     "    return [\" \".join([TEXT.vocab.itos[elm] \n",
     "                      for elm in get_numpy(batch.text[:,i])])\n",
     "            for i in range(batch.text.size()[1])]\n",
     "\n",
     "def get_labels(batch):\n",
-    "    \"\"\"    \n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    batch: torchtext.data.batch.Batch\n",
-    "    \n",
-    "    Returns\n",
-    "    -------\n",
-    "    [str]\n",
-    "    \"\"\"\n",
-    "    return [LABEL.vocab.itos[get_numpy(batch.label[i])[0]] for i in range(len(batch.label))]"
+    "    return [LABEL.vocab.itos[get_numpy(batch.label[i])] for i in range(len(batch.label))]"
    ]
   },
   {
@@ -346,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Run the bag of words model\n",
+    "## Train the LSTM Model\n",
     "\n",
     "**Warning** this might take a while.\n",
     "Go get a cop of coffe, and enjoy the visualizations.\n",
@@ -402,8 +378,8 @@
     "        val_losses /= val_lengths\n",
     "        val_accs /= val_lengths\n",
     "        \n",
-    "        print(\"### EVAL loss: {:.2f} accs: {:.2f}\".format(get_numpy(val_losses)[0],\n",
-    "                                                          get_numpy(val_accs)[0]))\n",
+    "        print(\"### EVAL loss: {:.2f} accs: {:.2f}\".format(get_numpy(val_losses),\n",
+    "                                                          get_numpy(val_accs)))\n",
     "        if i % tsne_every == 0:\n",
     "            update_plot(val_meta, 'hidden', tsne_plot)\n",
     "        \n",
