--- a/3_Recurrent/4.2-RNN-Introduction.ipynb
+++ b/3_Recurrent/4.2-RNN-Introduction.ipynb
@@ -26,7 +26,7 @@
     "The idea is that the network should be able to use the previous computations as some form of memory and apply this to the future computation.\n",
     "An image may best explain how this is to be understood,\n",
     "\n",
-    "![rnn-unfold](../static_files/rnn-unfold.png)\n",
+    "![rnn-unroll image](../static_files/rnn-unfold.png)\n",
     "\n",
     "\n",
     "where it the network contains the following elements:\n",
@@ -38,11 +38,11 @@
     "- $h$ is the hidden state (the network's memory) for a given time step, and\n",
     "- $o$ is the resulting output.\n",
     "\n",
-    "When the network is unfolded as shown, it is easier to refer to a timestep, $t$.\n",
+    "When the network is unrolled as shown, it is easier to refer to a timestep, $t$.\n",
     "We have the following computations through the network:\n",
     "\n",
-    "- $h_t = f(U_{x_t} + V_{h_{t-1}})$, where $f$ usually is an activation function, e.g. $\\mathrm{tanh}$.\n",
-    "- $o_t = \\mathrm{softmax}(W_{h_t})$"
+    "- $h_t = f(U\\,{x_t} + V\\,{h_{t-1}})$, where $f$ usually is an activation function, e.g. $\\mathrm{tanh}$.\n",
+    "- $o_t = \\mathrm{softmax}(W\\,{h_t})$"
    ]
   },
   {
@@ -195,8 +195,8 @@
     "Do however make sure to understand the concepts - they will help you debug, or when you want to work with more advanced concepts.\n",
     "\n",
     "Things to note however:\n",
-    " * `batch_first=True` determines the order of the sequence. Normally in `PyTorch` the input is expected to be `[seq_len, batch, input_size]`, but this is sometimes inconveniet, so we use `batch_first=True` to make the input `[batch, seq, feature]`. \n",
-    " * `pack_padded_sequence` and `pad_packed_sequence` are used for variale lenth sequences when the sequences don't have the same length. (Computers don't deal well with sequences of varing length, so we use padding to make them align).\n",
+    " * `batch_first=True` determines the order of the sequence. Normally in `PyTorch` the input is expected to be `[seq_len, batch, input_size]`, but this is sometimes inconvenient, so we use `batch_first=True` to make the input `[batch, seq, feature]`. \n",
+    " * `pack_padded_sequence` and `pad_packed_sequence` are used for variable length sequences when the sequences don't have the same length. (Computers don't deal well with sequences of varing length, so we use padding to make them align).\n",
     " \n",
     "For more on RNNs in `PyTorch` [see here](https://pytorch.org/docs/stable/nn.html#torch.nn.RNN)."
    ]
