--- a/3_Recurrent/4.3-RNN-Sentiment-Analysis.ipynb
+++ b/3_Recurrent/4.3-RNN-Sentiment-Analysis.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "\n",
     "\n",
-    "## Why do \n",
+    "## Why does\n",
     "The vanilla RNN has issues with vanishing gradients which give challenges in saving memory over longer sequences.\n",
     "\n",
     "To battle these issues the gated hidden units were create.\n",
