--- a/3_Recurrent/4.3-RNN-Sentiment-Analysis.ipynb
+++ b/3_Recurrent/4.3-RNN-Sentiment-Analysis.ipynb
@@ -47,18 +47,18 @@
     "The output of the LSTM unit is computed with the following functions, where $\\sigma = \\mathrm{softmax}$.\n",
     "We have input gate $i$, forget gate $f$, and output gate $o$ defines as\n",
     "\n",
-    "- $i = \\sigma (x_t U^i + h_{t-1} W^i)$\n",
+    "- $i = \\sigma ( U^i x_t + W^i h_{t-1})$\n",
     "\n",
-    "- $f = \\sigma (x_t U^f + h_{t-1} W^f)$\n",
+    "- $f = \\sigma ( U^f x_t + W^f h_{t-1})$\n",
     "\n",
-    "- $o = \\sigma (x_t U^o + h_{t-1} W^o)$\n",
+    "- $o = \\sigma ( U^o x_t + W^o h_{t-1})$\n",
     "\n",
-    "where $U^i, U^f, U^o$ are weight matrices applied to $x_t$, and\n",
-    "$W^i, W^f, W^o$ are weight matrices applied to $h_{t-1}$ for each respective gate.\n",
+    "where $U^i, U^f, U^o$ are weight matrices applied to $x_t$ (input vector), and\n",
+    "$W^i, W^f, W^o$ are weight matrices applied to $h_{t-1}$ (hidden state vector) for each respective gate.\n",
     "\n",
     "$h_{t-1}$, from the previous time step along with the current input $x_t$ are used to compute the a candidate $g$\n",
     "\n",
-    "- $g = \\mathrm{tanh}(x_t U^g + h_{t-1} W^g)$\n",
+    "- $g = \\mathrm{tanh}( U^g x_t +  W^g h_{t-1})$\n",
     "\n",
     "The value of the cell's memory, $c_t$, is updated as\n",
     "\n",
