Bugfix in Kaggle exercise

--- a/4_Mini_Project/4.1-EXE-Kaggle-Leaf-Challenge.ipynb
+++ b/4_Mini_Project/4.1-EXE-Kaggle-Leaf-Challenge.ipynb
@@ -473,7 +473,7 @@
    "outputs": [],
    "source": [
     "height, width, channels = IMAGE_SHAPE\n",
-    "features_cat_size = 1012  # <-- YOUR CODE HERE (This number will need to change as you change the network)\n",
+    "features_cat_size = 484  # <-- YOUR CODE HERE (This number will need to change as you change the network)\n",
     "\n",
     "conv_out_channels = 16\n",
     "conv_stride = 1\n",
@@ -491,10 +491,11 @@
     "                             out_channels=conv_out_channels,\n",
     "                             kernel_size=kernel_size,\n",
     "                             stride=conv_stride,\n",
-    "                             padding=2)\n",
-    "        self.pool_1 = MaxPool2d(kernel_size=3,\n",
+    "                             padding=0)\n",
+    "        self.pool_1 = MaxPool2d(kernel_size=2,\n",
     "                                stride=pool_stride,\n",
     "                                padding=0)\n",
+    "        self.fc = Linear(576, 256)\n",
     "        \n",
     "        self.rnn_1 = GRU(input_size=1,\n",
     "                         hidden_size=100,\n",
@@ -524,8 +525,8 @@
     "        x = self.pool_1(x)\n",
     "        x = relu(x)\n",
     "        \n",
-    "        features_img = x.view(batch_size, -1)\n",
-    "        features_img = features_img\n",
+    "        features_img = x.view(x.shape[0], -1)\n",
+    "        features_img = relu(self.fc(features_img))\n",
     "        # YOUR CODE HERE ^^^\n",
     "        features.append(features_img)\n",
     "        \n",
@@ -535,14 +536,13 @@
     "        x_shape.unsqueeze_(-1)\n",
     "        _, hs = self.rnn_1(x_shape)  # note, hs gives (num_layers * num_directions, batch, hidden_size)\n",
     "        hs = hs.permute(1, 0, 2)  # so, we need to move batch dim to first element\n",
-    "        hs = hs.view(batch_size, -1)\n",
+    "        hs = hs.view(hs.shape[0], -1)\n",
     "        features_rnn = hs\n",
     "        # YOUR CODE HERE ^^^\n",
     "        features.append(features_rnn)\n",
     "        \n",
     "        features_final = torch.cat(features, dim=1)\n",
-    "        pre_softmax = self.l_out(features_final)\n",
-    "        out['out'] = softmax(pre_softmax, dim=1)\n",
+    "        out['out'] = self.l_out(features_final)\n",
     "        return out\n",
     "\n",
     "net = Net()\n",
@@ -825,13 +825,6 @@
     "\n",
     "Success! "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
