--- a/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
+++ b/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "The first lab is all about understanding the mathematical concepts behind neural networks. You will derive everything by hand this first week. The hand-in this week is your modifications to this notebook.\n",
     "\n",
-    "In week two you will program what you have derived this week in  [NumPy](https://numpy.org/) and in week three and onwards you will work in a framework dedicated to making it easy to write deep learning code. In this course we will use [PyTorch](https://pytorch.org/) because it is more Python-like than for example TensorFlow. TensorFlow has some advantages if you want to deploy deep learning models. For learning and research PyTorch is right now the preferred framework. But this is a quite dynamic field where a lot is happening so it is hard to say what is the preferred framework a year from now.    \n",
+    "In week two you will program what you have derived this week in  [NumPy](https://numpy.org/) and in week three and onwards you will work in a framework dedicated to making it easy to write deep learning code. In this course we will use [PyTorch](https://pytorch.org/) because it is more Python-like than for example TensorFlow. However, TensorFlow has some advantages if you want to deploy deep learning models. For learning and research PyTorch is right now the preferred framework. But this is a quite dynamic field where a lot is happening, so it is hard to say what is the preferred framework a year from now.    \n",
     "\n",
     "Linear algebra, probability theory, statistics and optimization are all underpinning deep learning. The availability of frameworks is to some degree hiding this and making it possible to make quite impressive applications without deep understanding of the underlying mathematical concepts. This is both a blessing and a curse. The ambition of this course is to educate first class deep learners that can develop deep learning solutions taylored to the problem at hand. Therefore we need the fundamental understanding. We have experienced that neglecting the fundament will always come back to hunt you later when we encounter real world problems. So sharpen your pen and get ready to learn new stuff or more likely refreshen some stuff you forgot you knew years ago. :-) "
    ]
@@ -50,7 +50,7 @@
     "# Neural networks - the feed forward model\n",
     "We will meet different variants of neural network models throughout the course. We need different architectures because they have different type of symmetries that reflect data we encoutner with differnt spatial and temporal invariances. \n",
     "\n",
-    "To get started we work with the most basic variant the so-called feed-forward neural network (FFNN). A FFNN with one hidden layer with $M$ hidden unit and two layers of adaptable parameters (weights) denoted by $w=w^{(1)},w^{(2)}$ is plotted below. In literature sometimes $\\theta$ will be used instead of $w$."
+    "To get started we work with the most basic variant: the so-called *feed-forward neural network* (FFNN). A FFNN with one hidden layer with $M$ hidden unit and two layers of adaptable parameters (weights) denoted by $w=w^{(1)},w^{(2)}$ is plotted below. In literature sometimes $\\theta$ will be used instead of $w$."
    ]
   },
   {
@@ -168,7 +168,7 @@
    "source": [
     "# Loss functions and maximum likelihood\n",
     "\n",
-    "The FFNN model is quite flexible and can learn to approximate all sorts of functions from training data. Below is some examples of one dimensional functions learned with an FFNN with one hidden layer with three hidden units, $\\tanh$ as the non-linear function in the hidden layer and linear output:\n",
+    "The FFNN model is quite flexible and can learn to approximate all sorts of functions from training data. Below is some examples of one-dimensional functions learned with an FFNN with one hidden layer with three hidden units, $\\tanh$ as the non-linear function in the hidden layer and linear output:\n",
     "$$\n",
     "y(x) = \\sum_{i=0}^3 w^{(2)}_i \\tanh( w^{(1)}_i x ) \\  \n",
     "$$\n",
@@ -267,11 +267,11 @@
     "$$\n",
     "where $|| \\ldots ||_2^2$ is shorthand for the sum of squared components.\n",
     "\n",
-    "This sum of squares error function is appropiate for regression (= targets are continuous) as in the example above. It is not useful for classification where targets are discrete class labels. So in order to come up with a proper loss function for all cases we will appeal to the maximum likelihood. The likelihood is defined as the probability of the data - in supervised learning the target $\\mathbf{t}_1,\\ldots,\\mathbf{t}_N$ given the model parameters and the inputs:\n",
+    "This sum of squares error function is appropiate for regression (= targets are continuous) as in the example above. It is not useful for classification where targets are discrete class labels. So in order to come up with a proper loss function for all cases we will appeal to the maximum likelihood. The likelihood is defined as the probability of the data - in supervised learning the target $\\mathbf{t}_1,\\ldots,\\mathbf{t}_N$ - given the model parameters and the inputs:\n",
     "$$\n",
     "p(\\mathbf{t}_1,\\ldots,\\mathbf{t}_N|\\mathbf{x}_1,\\ldots,\\mathbf{x}_N,w) \\ .\n",
     "$$\n",
-    "Maximum likelihood simply say that we should use the set of parameters $w$ that assigns the highest possible probability to the observed targets $\\mathbf{t}_1,\\ldots,\\mathbf{t}_N$.\n",
+    "Maximum likelihood simply says that we should use the set of parameters $w$ that assigns the highest possible probability to the observed targets $\\mathbf{t}_1,\\ldots,\\mathbf{t}_N$.\n",
     "\n",
     "In order to go further from here we need to make some assumptions:\n",
     "\n",
@@ -305,7 +305,7 @@
     "$$\n",
     "\\frac{ND}{2} \\log 2\\pi \\sigma^2 + \\frac{1}{2\\sigma^2} E(w) \\ . \n",
     "$$\n",
-    "Further argue why applying the log and multiplying by minus one is the right thing to do in order to get a loss function. Hint: Will the optimum of the likelihood function change if we apply the logarithm? "
+    "Further argue why applying the log and multiplying by minus one is the right thing to do in order to get a loss function. *Hint:* Will the optimum of the likelihood function change if we apply the logarithm? "
    ]
   },
   {
@@ -314,7 +314,7 @@
    "source": [
     "## Exercise f) optional\n",
     "\n",
-    "f) Show that the optimum (=minimum of the loss) with respect to $w$ is not affected by the value of $\\sigma^2$. Find the optimum for $\\sigma^2$ as a function of $w$. \n",
+    "f) Show that the optimum (= minimum of the loss) with respect to $w$ is not affected by the value of $\\sigma^2$. Find the optimum for $\\sigma^2$ as a function of $w$. \n",
     "\n",
     "This means that for the problem of finding $w$, sum of squares and maximum likelihood for the Gaussian likelihood with $\\sigma^2 \\mathbf{I}$ covariance are equivalant.  "
    ]
@@ -548,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
