--- a/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
+++ b/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
@@ -265,7 +265,7 @@
     "$$\n",
     "E(w) = \\sum_{n=1}^N || \\mathbf{y}(\\mathbf{x}_n) - \\mathbf{t}_n||_2^2 \\ ,\n",
     "$$\n",
-    "where $|| \\ldots ||_2^2$ is shorthand for the sum of squared components. (See the explanation of the Euclidean norm $||.||_2$ [here](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=2ahUKEwiVt930yLHkAhUOJFAKHRy_C8sQygQwAXoECAEQCQ&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FNorm_(mathematics)%23Euclidean_norm&usg=AOvVaw3sWaBCY2SnGA40LFxM70k3))\n",
+    "where $|| \\ldots ||_2^2$ is shorthand for the sum of squared components. (See the explanation of the Euclidean norm $||.||_2$ [here](https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm))\n",
     "\n",
     "This sum of squares error function is appropiate for regression (= targets are continuous) as in the example above. It is not useful for classification where targets are discrete class labels. So in order to come up with a proper loss function for all cases we will appeal to the maximum likelihood. The likelihood is defined as the probability of the data - in supervised learning the target $\\mathbf{t}_1,\\ldots,\\mathbf{t}_N$ - given the model parameters and the inputs:\n",
     "$$\n",
