--- a/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
+++ b/1_Feedforward_Pen_and_Paper/1.1-FNN-Pen-and-Paper.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {
       "image/jpeg": {
        "width": 500
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +265,7 @@
     "$$\n",
     "E(w) = \\sum_{n=1}^N || \\mathbf{y}(\\mathbf{x}_n) - \\mathbf{t}_n||_2^2 \\ ,\n",
     "$$\n",
-    "where $|| \\ldots ||_2^2$ is shorthand for the sum of squared components. (See the explanation of the Euclidean norm $||.||_2$ [here](https://en.wikipedia.org/wiki/Norm_(mathematics)#Euclidean_norm))\n",
+    "where $|| \\ldots ||_2^2$ is shorthand for the sum of squared components.\n",
     "\n",
     "This sum of squares error function is appropiate for regression (= targets are continuous) as in the example above. It is not useful for classification where targets are discrete class labels. So in order to come up with a proper loss function for all cases we will appeal to the maximum likelihood. The likelihood is defined as the probability of the data - in supervised learning the target $\\mathbf{t}_1,\\ldots,\\mathbf{t}_N$ - given the model parameters and the inputs:\n",
     "$$\n",
@@ -275,7 +275,7 @@
     "\n",
     "In order to go further from here we need to make some assumptions:\n",
     "\n",
-    "1. Unless we are working with series data - such as time series - we will assume that each data point is independently sampled and each data point is sampled from the same distribution (also known as iid = independent and identically distributed):\n",
+    "1. Unless we are working with series data - such as time series - we will assume that each data point is independently sampled and each data point is sampled from the same distribution (also known as iid = Independent and identically distributed):\n",
     "$$\n",
     "p(\\mathbf{t}_1,\\ldots,\\mathbf{t}_N|\\mathbf{x}_1,\\ldots,\\mathbf{x}_N,w) =\n",
     "\\prod_{n=1}^N p(\\mathbf{t}_n|\\mathbf{x}_n,w) \\ .\n",
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {
       "image/jpeg": {
        "width": 500
@@ -440,7 +440,7 @@
    "metadata": {},
    "source": [
     "## Exercise i) \n",
-    "i) Calculate \n",
+    "Calculate \n",
     "$$\n",
     "\\delta^{(L)}_j = \\frac{\\partial E(w)}{\\partial a^{(L)}_{j}}\n",
     "$$\n",
@@ -509,7 +509,7 @@
    "metadata": {},
    "source": [
     "## Exercise l)\n",
-    "j) Modify the backpropagation rules to be able to take a dataset of size greater than one. \n",
+    "l) Modify the backpropagation rules to be able to take a dataset of size greater than one. \n",
     "Hint: This only requires introducing a sum over $n$ and $n$ indices in a few places."
    ]
   },
@@ -548,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
