fixed subtle error in exercise f
the provided finite difference method code now correctly uses test_z instead of test_a

--- a/2_Feedforward_NumPy/2.1-FNN-NumPy.ipynb
+++ b/2_Feedforward_NumPy/2.1-FNN-NumPy.ipynb
@@ -854,9 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def finite_diff_grad(x, NN, ACT_F, epsilon=None):\n",
@@ -882,7 +880,7 @@
     "        epsilon = np.finfo(np.float32).eps # Machine epsilon for float 32\n",
     "        \n",
     "    grads = deepcopy(NN)               # Copy of structure of the weights and biases to save the gradients                        \n",
-    "    test_a, _ = forward_pass(x, NN_UT, ACT_F_UT) # We evaluate f(x)\n",
+    "    _ , test_z = forward_pass(x, NN_UT, ACT_F_UT) # We evaluate f(x)\n",
     "    \n",
     "    for e in range(len(NN)):                       # Iterator over elements of the NN:       weights or biases\n",
     "        for h in range(len(NN[e])):                # Iterator over the layer of the element: layer number\n",
@@ -890,8 +888,8 @@
     "                for c in range(NN[e][h].shape[1]): # Iterator over                           column number \n",
     "                    NN_copy             = deepcopy(NN)    \n",
     "                    NN_copy[e][h][r,c] += epsilon\n",
-    "                    test_a_eps, _       = forward_pass(x, NN_copy, ACT_F)     # We evaluate f(x+eps)\n",
-    "                    grads[e][h][r,c]    = (test_a_eps[-1]-test_a[-1])/epsilon # Definition of finite differences gradient\n",
+    "                    _, test_z_eps       = forward_pass(x, NN_copy, ACT_F)     # We evaluate f(x+eps)\n",
+    "                    grads[e][h][r,c]    = (test_z_eps[-1]-test_z[-1])/epsilon # Definition of finite differences gradient\n",
     "    \n",
     "    return grads[0], grads[1]"
    ]
