--- a/3_Feedforward_PyTorch/3.1-what-is-pytorch.ipynb
+++ b/3_Feedforward_PyTorch/3.1-what-is-pytorch.ipynb
@@ -361,7 +361,7 @@
     "    print(y)\n",
     "    print(z)\n",
     "else:\n",
-    "    print(\"CUDA not available on your machie.\")"
+    "    print(\"CUDA not available on your machine.\")"
    ]
   },
   {
